# rmreader

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  feed_colors_mockup.html  flake.nix  visuals_picker.html
.githooks/: pre-commit
docs/superpowers/plans/: 2026-05-21-faster-pdf-generation.md  2026-05-21-faster-pdf-generation.md.tasks.json  2026-05-21-rmreader-phase1.md  2026-05-21-rmreader-phase1.md.tasks.json  2026-05-22-annotation-readback.md  2026-05-22-annotation-readback.md.tasks.json
docs/superpowers/specs/: 2026-05-21-faster-pdf-generation-design.md  2026-05-21-rmreader-design.md  2026-05-22-annotation-readback-design.md
docs/superpowers/spikes/: 2026-05-21-fulgur-running-header-links.md  (+1 more)
examples/: deploy_only.rs  dump_tounicode.rs  make_test_pdf.rs  mockup.rs  readback_inspect.rs  readback_overlay.rs  spike_stamp.rs  tests.rs  typ_check.rs  typst_preview.rs
nix/overlays/: rmapi.nix
src/: assemble.rs  cache.rs  cli.rs  config.rs  content.rs  device.rs  embed.rs  generate.rs  lib.rs  main.rs  manifest.rs  postprocess.rs  render.rs  theme.rs  wizard.rs
src/deploy/: local.rs  mod.rs  rmapi.rs
src/readback/: classify.rs  coords.rs  mod.rs  textlayer.rs
src/readwise/: http.rs  mod.rs
src/render/: html2typst.rs  mod.rs  typst_doc.rs  world.rs
templates/: article.html  base.html  card.html  index.html  nav.html
tests/: assemble.rs  cache.rs  classify.rs  cli.rs  config.rs  content.rs  coords.rs  deploy.rs  device.rs  embed.rs  generate.rs  postprocess.rs  readback.rs  readwise.rs  render.rs  textlayer.rs  wizard.rs
themes/: reader.toml
