[package]
name = "rmreader"
version = "0.1.0"
edition = "2021"
description = "Readwise Reader -> reMarkable reader PDFs"

[lib]
name = "rmreader"
path = "src/lib.rs"

[[bin]]
name = "rmreader"
path = "src/main.rs"

[dependencies]
rmfiles = { path = "../rmfiles" }
fulgur = "0.6"
askama = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
anyhow = "1"
ureq = "2"
lol_html = "1"
image = "0.25"
lopdf = "0.36"
tempfile = "3"

[dev-dependencies]
lopdf = "0.36"
image = "0.25"
